// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selector should render a checked selector 1`] = `
.circuit-2 {
  position: relative;
  margin-bottom: 16px;
}

.circuit-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0:focus + label::before {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus + label::before::-moz-focus-inner {
  border: 0;
}

.circuit-0:checked + label {
  background-color: #EDF4FC;
}

.circuit-0:checked + label::before {
  border: 2px solid #3388FF;
}

.circuit-1 {
  display: block;
  cursor: pointer;
  padding: 16px 24px;
  border-radius: 5px;
  background-color: #FFFFFF;
  text-align: center;
}

.circuit-1::before {
  display: block;
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: 5px;
  border: 1px solid #D8DDE1;
  -webkit-transition: border 0.1s ease-in-out;
  transition: border 0.1s ease-in-out;
}

.circuit-1:hover {
  background-color: #FAFBFC;
}

.circuit-1:hover::before {
  border-color: #9DA7B1;
}

.circuit-1:active {
  background-color: #EEF0F2;
}

.circuit-1:active::before {
  border-color: #5C656F;
}

<div
  class="circuit-2"
>
  <input
    checked=""
    class="circuit-0"
    id="selector_3"
    name="name"
    type="radio"
    value="value"
  />
  <label
    class="circuit-1"
    for="selector_3"
  >
    Label
  </label>
</div>
`;

exports[`Selector should render a default selector 1`] = `
.circuit-2 {
  position: relative;
  margin-bottom: 16px;
}

.circuit-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0:focus + label::before {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus + label::before::-moz-focus-inner {
  border: 0;
}

.circuit-0:checked + label {
  background-color: #EDF4FC;
}

.circuit-0:checked + label::before {
  border: 2px solid #3388FF;
}

.circuit-1 {
  display: block;
  cursor: pointer;
  padding: 16px 24px;
  border-radius: 5px;
  background-color: #FFFFFF;
  text-align: center;
}

.circuit-1::before {
  display: block;
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: 5px;
  border: 1px solid #D8DDE1;
  -webkit-transition: border 0.1s ease-in-out;
  transition: border 0.1s ease-in-out;
}

.circuit-1:hover {
  background-color: #FAFBFC;
}

.circuit-1:hover::before {
  border-color: #9DA7B1;
}

.circuit-1:active {
  background-color: #EEF0F2;
}

.circuit-1:active::before {
  border-color: #5C656F;
}

<div
  class="circuit-2"
>
  <input
    class="circuit-0"
    id="selector_1"
    name="name"
    type="radio"
    value="value"
  />
  <label
    class="circuit-1"
    for="selector_1"
  >
    Label
  </label>
</div>
`;

exports[`Selector should render a disabled selector 1`] = `
.circuit-2 {
  position: relative;
  margin-bottom: 16px;
}

.circuit-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0:focus + label::before {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus + label::before::-moz-focus-inner {
  border: 0;
}

.circuit-0:checked + label {
  background-color: #EDF4FC;
}

.circuit-0:checked + label::before {
  border: 2px solid #3388FF;
}

.circuit-1 {
  display: block;
  cursor: pointer;
  padding: 16px 24px;
  border-radius: 5px;
  background-color: #FFFFFF;
  text-align: center;
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-1::before {
  display: block;
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: 5px;
  border: 1px solid #D8DDE1;
  -webkit-transition: border 0.1s ease-in-out;
  transition: border 0.1s ease-in-out;
}

.circuit-1:hover {
  background-color: #FAFBFC;
}

.circuit-1:hover::before {
  border-color: #9DA7B1;
}

.circuit-1:active {
  background-color: #EEF0F2;
}

.circuit-1:active::before {
  border-color: #5C656F;
}

<div
  class="circuit-2"
>
  <input
    class="circuit-0"
    disabled=""
    id="selector_2"
    name="name"
    type="radio"
    value="value"
  />
  <label
    class="circuit-1"
    disabled=""
    for="selector_2"
  >
    Label
  </label>
</div>
`;
